# pyannote-audio

./: README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: doc.yml  pypi.yml  test.yml  test_cli.yml
pyannote/: __init__.py
pyannote/audio/core/: io.py
